--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -88,13 +88,7 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 30px 60px;
 }
 
 a {
@@ -102,8 +96,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media screen and (max-width: 800px) {
+  body {
+    margin: 30px 20px;
   }
 }
