--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -84,8 +84,8 @@
 html,
 body {
   max-width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
-  height: 100%;
 }
 
 body {
@@ -96,10 +96,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-#__next {
-  height: 100%;
 }
 
 @media screen and (max-width: 800px) {
